<resources>
    <string name="app_name">Chatify</string>

    <string name="name_field_txt">Enter Name</string>
    <string name="email_field_txt">Enter Email</string>
    <string name="password_field_txt">Enter Password</string>
    <string name="sign_up_btn_txt">Sign Up</string>
    <string name="log_in_btn_txt">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="typeMsg_txt">Type a message</string>

    <string name="send_icon">SendIcon</string>

</resources>