<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.LogInActivity">

    <TextView
        android:id="@+id/loginHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/login_email_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_field_txt"
        android:textColor="@color/black"
        android:autofillHints="name"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginHeading" />

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:inputType="textPassword"
        android:hint="@string/password_field_txt"
        android:textColor="@color/black"
        android:autofillHints="name"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/input_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email_field" />

    <Button
        android:id="@+id/logInBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:elevation="4dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/log_in_btn_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password_field" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:elevation="4dp"
        android:paddingHorizontal="24dp"
        android:paddingVertical="12dp"
        android:text="@string/sign_up_btn_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>